chore: add documentation in README.md and re-organized the project folder structure
