# docs/swagger.json
@@ -18,7 +18,7 @@
     "paths": {
         "/news": {
             "get": {
-                "description": "Retrieve all News items",
+                "description": "Retrieve all News items with optional filtering by status or topic",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,6 +27,20 @@
                 ],
                 "tags": [
                     "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by status",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by Topic ID",
+                        "name": "topicID",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -65,12 +79,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "News ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "Create News Request",
+                        "name": "CreateNewsRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateNewsRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -98,14 +113,21 @@
         "/news/{id}": {
             "get": {
                 "description": "Detail News with the provided information",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "News"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "News ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -222,9 +244,9 @@
                 }
             }
         },
-        "/topic/{id}": {
+        "/topics": {
             "get": {
-                "description": "Detail Topic with the provided information",
+                "description": "List all topics with related topic",
                 "consumes": [
                     "application/json"
                 ],
@@ -232,7 +254,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "News"
+                    "Topics"
                 ],
                 "responses": {
                     "200": {
@@ -246,7 +268,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/common.TopicResource"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/common.TopicResource"
+                                            }
                                         }
                                     }
                                 }
@@ -254,9 +279,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/topics": {
+            },
             "post": {
                 "description": "Create a new Topic with the provided information",
                 "consumes": [
@@ -302,6 +325,45 @@
             }
         },
         "/topics/{id}": {
+            "get": {
+                "description": "Detail Topic with the provided information",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Topics"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Topic ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/common.TopicResource"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Update an existing Topic with the provided information",
                 "consumes": [
@@ -395,43 +457,6 @@
                     }
                 }
             }
-        },
-        "/v1/api/topics": {
-            "get": {
-                "description": "List all topics with related topic",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Topics"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/common.SuccessWithMessageResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/common.TopicResource"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -493,6 +518,35 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "request.CreateNewsRequest": {
+            "type": "object",
+            "required": [
+                "content",
+                "status",
+                "title"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string",
+                    "enum": [
+                        "draft",
+                        "published"
+                    ]
+                },
+                "title": {
+                    "type": "string"
+                },
+                "topic_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
